==> davkk/psm-microcontrollers/lab10-sdcard/FatFs/mmc_avr.c <==
#include <avr/io.h>
#include <avr/interrupt.h>
#include "diskio.h"
#define SS PB4
#define MOSI PB5
#define MISO PB6
#define SCK PB7
#define CS_LOW()	PORTB&=~(1<<SS)			/* CS=low */
#define	CS_HIGH()	PORTB|=(1<<SS);			/* CS=high */
#define MMC_CD		1
#define MMC_WP		0
#define	FCLK_SLOW()	SPCR = 0x52		/* Set slow clock (F_CPU / 64) */
#define	FCLK_FAST()	SPCR = 0x50		/* Set fast clock (F_CPU / 2) */
#define CMD0	(0)			/* GO_IDLE_STATE */
#define CMD1	(1)			/* SEND_OP_COND (MMC) */
#define	ACMD41	(0x80+41)	/* SEND_OP_COND (SDC) */
#define CMD8	(8)			/* SEND_IF_COND */
#define CMD9	(9)			/* SEND_CSD */
#define CMD10	(10)		/* SEND_CID */
#define CMD12	(12)		/* STOP_TRANSMISSION */
#define ACMD13	(0x80+13)	/* SD_STATUS (SDC) */
#define CMD16	(16)		/* SET_BLOCKLEN */
#define CMD17	(17)		/* READ_SINGLE_BLOCK */
#define CMD18	(18)		/* READ_MULTIPLE_BLOCK */
#define CMD23	(23)		/* SET_BLOCK_COUNT (MMC) */
#define	ACMD23	(0x80+23)	/* SET_WR_BLK_ERASE_COUNT (SDC) */
#define CMD24	(24)		/* WRITE_BLOCK */
#define CMD25	(25)		/* WRITE_MULTIPLE_BLOCK */
#define CMD32	(32)		/* ERASE_ER_BLK_START */
#define CMD33	(33)		/* ERASE_ER_BLK_END */
#define CMD38	(38)		/* ERASE */
#define CMD55	(55)		/* APP_CMD */
#define CMD58	(58)		/* READ_OCR */

static
void power_on (void)
{
  DDRB|=(1<<SS)|(1<<MOSI)|(1<<SCK);
  PORTB|=(1<<SS);
  DDRB&=~(MISO);	
  SPCR=(1<<SPE)|(1<<MSTR)|(1<<SPR0);
  
	/* Start 100Hz system timer (TC2.OC) */
	OCR2 = F_CPU / 1024 / 100 - 1;
	
	TCCR2 = (1<<WGM21)|(1<<CS22)|(1<<CS21)|(1<<CS20);
	TIMSK |= (1<<OCIE2);

	sei();
  
}

static
BYTE xchg_spi (		/* Returns received data */
	BYTE dat		/* Data to be sent */
)
{
	SPDR = dat;
	 while(! (SPSR & (1<<SPIF))); //SPIF=1 transmisja zakonczona
	return SPDR;
}

static
void xmit_spi_multi (
	const BYTE *p,	/* Data block to be sent */
	UINT cnt		/* Size of data block (must be multiple of 2) */
)
{
	do {
		SPDR = *p++;  while(! (SPSR & (1<<SPIF)));
		SPDR = *p++;  while(! (SPSR & (1<<SPIF)));
	} while (cnt -= 2);
}

static
void rcvr_spi_multi (
	BYTE *p,	/* Data buffer */
	UINT cnt	/* Size of data block (must be multiple of 2) */
)
{
	do {
		SPDR = 0xFF;  while(! (SPSR & (1<<SPIF))); *p++ = SPDR;
		SPDR = 0xFF;  while(! (SPSR & (1<<SPIF))); *p++ = SPDR;
	} while (cnt -= 2);
}
